--- a/Blik Mac/GLAPreferencesChooseSectionViewController.xib
+++ b/Blik Mac/GLAPreferencesChooseSectionViewController.xib
@@ -10,6 +10,7 @@
                 <outlet property="editPermittedApplicationFoldersButton" destination="cUl-LF-03T" id="2Gf-4G-rc2"/>
                 <outlet property="editPermittedApplicationFoldersLabel" destination="nuV-8B-eaD" id="vGh-aR-Lii"/>
                 <outlet property="hideMainWindowWhenInactiveCheckButton" destination="zKM-1K-Ajh" id="sjo-OY-oHO"/>
+                <outlet property="reduceMotionCheckButton" destination="27i-Ik-Lsh" id="RcA-V0-XdT"/>
                 <outlet property="showDockIconCheckButton" destination="r1c-71-hoJ" id="vip-KA-qOu"/>
                 <outlet property="showStatusMenuItemCheckButton" destination="0AQ-QA-VI6" id="VfP-zV-Yjp"/>
                 <outlet property="view" destination="BUd-m3-8GV" id="0CN-R3-Fyl"/>
@@ -17,12 +18,12 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView id="BUd-m3-8GV">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="219"/>
+        <customView misplaced="YES" id="BUd-m3-8GV">
+            <rect key="frame" x="0.0" y="0.0" width="480" height="239"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="0AQ-QA-VI6">
-                    <rect key="frame" x="138" y="58" width="194" height="18"/>
+                    <rect key="frame" x="138" y="78" width="194" height="18"/>
                     <buttonCell key="cell" type="check" title="Show Launcher in status bar" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="KlU-bO-BMH">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
@@ -32,7 +33,7 @@
                     </connections>
                 </button>
                 <button identifier="chooseSection" placeholderIntrinsicWidth="120" placeholderIntrinsicHeight="30" translatesAutoresizingMaskIntoConstraints="NO" id="cUl-LF-03T" customClass="GLAButton">
-                    <rect key="frame" x="180" y="164" width="120" height="27"/>
+                    <rect key="frame" x="180" y="184" width="120" height="27"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="27" id="WIY-03-eB0"/>
                     </constraints>
@@ -60,7 +61,7 @@
                     </connections>
                 </button>
                 <textField setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nuV-8B-eaD">
-                    <rect key="frame" x="88" y="110" width="304" height="46"/>
+                    <rect key="frame" x="88" y="130" width="304" height="46"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="300" id="ctg-1T-MH8"/>
                     </constraints>
@@ -71,7 +72,7 @@
                     </textFieldCell>
                 </textField>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="r1c-71-hoJ">
-                    <rect key="frame" x="138" y="38" width="134" height="18"/>
+                    <rect key="frame" x="138" y="58" width="134" height="18"/>
                     <buttonCell key="cell" type="check" title="Show icon in Dock" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="HVM-r9-TLq">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
@@ -81,7 +82,7 @@
                     </connections>
                 </button>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="zKM-1K-Ajh">
-                    <rect key="frame" x="138" y="18" width="219" height="18"/>
+                    <rect key="frame" x="138" y="38" width="219" height="18"/>
                     <buttonCell key="cell" type="check" title="Hide main window when inactive" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="upf-sW-OcL">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
@@ -90,21 +91,33 @@
                         <action selector="toggleHideMainWindowWhenInactive:" target="-2" id="Oib-wB-S9Y"/>
                     </connections>
                 </button>
+                <button translatesAutoresizingMaskIntoConstraints="NO" id="27i-Ik-Lsh">
+                    <rect key="frame" x="138" y="18" width="166" height="18"/>
+                    <buttonCell key="cell" type="check" title="Reduce motion to fades" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="JdB-Rv-kcB">
+                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                        <font key="font" metaFont="system"/>
+                    </buttonCell>
+                    <connections>
+                        <action selector="toggleReduceMotion:" target="-2" id="pYJ-e1-kX7"/>
+                    </connections>
+                </button>
             </subviews>
             <constraints>
                 <constraint firstItem="r1c-71-hoJ" firstAttribute="leading" secondItem="0AQ-QA-VI6" secondAttribute="leading" id="0gG-As-A7j"/>
+                <constraint firstAttribute="bottom" secondItem="27i-Ik-Lsh" secondAttribute="bottom" constant="20" id="8LQ-Py-SKt"/>
                 <constraint firstItem="zKM-1K-Ajh" firstAttribute="leading" secondItem="0AQ-QA-VI6" secondAttribute="leading" id="IX7-Nh-kx8"/>
                 <constraint firstItem="r1c-71-hoJ" firstAttribute="top" secondItem="0AQ-QA-VI6" secondAttribute="bottom" constant="6" id="Jyv-Zi-N7a"/>
                 <constraint firstItem="nuV-8B-eaD" firstAttribute="top" secondItem="cUl-LF-03T" secondAttribute="bottom" constant="8" id="OXP-iW-WHH"/>
-                <constraint firstAttribute="bottom" secondItem="zKM-1K-Ajh" secondAttribute="bottom" constant="20" symbolic="YES" id="PWI-sr-Jn0"/>
+                <constraint firstItem="27i-Ik-Lsh" firstAttribute="top" secondItem="zKM-1K-Ajh" secondAttribute="bottom" constant="6" id="W3n-2g-0OB"/>
                 <constraint firstItem="zKM-1K-Ajh" firstAttribute="top" secondItem="r1c-71-hoJ" secondAttribute="bottom" constant="6" id="Zyv-mp-CRh"/>
                 <constraint firstAttribute="centerX" secondItem="nuV-8B-eaD" secondAttribute="centerX" id="cs6-ed-peO"/>
                 <constraint firstAttribute="centerY" secondItem="cUl-LF-03T" secondAttribute="centerY" constant="68" id="fTg-wb-Az7"/>
                 <constraint firstItem="0AQ-QA-VI6" firstAttribute="top" secondItem="nuV-8B-eaD" secondAttribute="bottom" constant="36" id="rKu-ls-lQ7"/>
                 <constraint firstAttribute="centerX" secondItem="cUl-LF-03T" secondAttribute="centerX" id="w7f-yS-EzO"/>
+                <constraint firstItem="27i-Ik-Lsh" firstAttribute="leading" secondItem="0AQ-QA-VI6" secondAttribute="leading" id="xfz-38-utr"/>
                 <constraint firstAttribute="centerX" secondItem="0AQ-QA-VI6" secondAttribute="leading" constant="100" id="yus-jP-WKK"/>
             </constraints>
-            <point key="canvasLocation" x="231" y="233.5"/>
+            <point key="canvasLocation" x="231" y="243.5"/>
         </customView>
     </objects>
 </document>
